# scouting-tooling-2024

./: .copier-answers.yml  README.md  pyproject.toml  t2.py  tempCodeRunnerFile.py
archive/: google_sheets_script.gs  scoutV1.py  scoutV2.py  scoutV3.py  scoutV4.py  scoutV5.py  scoutV6.py  scoutV7.py  scoutV8.py  scouting_assignments.csv  tempCodeRunnerFile.py  utility.py
docs/: conf.py  index.rst  requirements.txt
scouting_tools/: __init__.py  __main__.py  scouting_schedule.csv
tests/: test_version.py
